forecast HTML and CSS

--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,19 @@ h1 .active:hover {
   cursor: default;
   color: black;
 }
+.weather-forecast {
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
